# play

./: Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: automerge.yml  build-container.yml  ci.yml
core/: Cargo.toml  README.md
core/samples/samples/: sine_440hz_stereo.m4a  sine_440hz_stereo_lc.m4a
core/src/: lib.rs
crates/storage/: Cargo.toml
play/: Cargo.toml
src/: config.rs  lib.rs  main.rs  play.rs  result.rs
