[workspace]
members = [
  "./crates/storage",
]

[package]
name = "play"
version = "0.1.0"
authors = ["Nicholas Young <hi@secretfader.com>"]
edition = "2018"
publish = false

[dependencies]
structopt = "0.3.20"
thiserror = "1.0.21"
envy = "0.4.1"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
storage = { path = "./crates/storage" }

[dependencies.tokio]
version = "0.2.22"
features = [
  "macros",
  "fs",
]

[[bin]]
name = "play"
path = "src/main.rs"
